FST serialisation